# flamingo

flamingoserver/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  compile_commands.json  deng.h
flamingoserver/base/AsyncLog/: AsyncLog.cpp
flamingoserver/base/ConfigFileReader/: ConfigFileReader.cpp
flamingoserver/base/tinyWebserver/log/: log.cpp  log.h
flamingoserver/chatserversrc/: BussinessLogic.cpp  BussinessLogic.h  ChatServer.cpp  ChatServer.h  ChatSession.cpp  ChatSession.h  Msg.h  MsgCacheManager.cpp  MsgCacheManager.h  TcpSession.cpp  TcpSession.h  UserManager.cpp  UserManager.h  main.cpp
flamingoserver/chatserversrc/HttpServer/: HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h
flamingoserver/chatserversrc/MonitorServer/: MonitorServer.cpp  MonitorServer.h  MonitorSession.cpp  MonitorSession.h
flamingoserver/chatserversrc/WebsocketServer/appsrc/: BusinessSession.cpp  BusinessSession.h
flamingoserver/chatserversrc/WebsocketServer/resources/static/css/: chat.css  login.css  register.css
flamingoserver/chatserversrc/WebsocketServer/resources/static/html/: chat.html  index.html  login.html  register.html
flamingoserver/chatserversrc/WebsocketServer/resources/static/js/: chat.js  index.js  login.js  register.js
flamingoserver/chatserversrc/WebsocketServer/websocketsrc/: HttpMsgDeal.cpp  HttpMsgDeal.h  HttpParse.cpp  HttpParse.h  MyWebSocketServer.cpp  MyWebSocketServer.h  MyWebSocketSession.cpp  MyWebSocketSession.h  httpMsg.cpp  httpMsg.h
flamingoserver/etc/: chatserver.conf
flamingoserver/fileserversrc/: FileManager.cpp  FileServer.cpp  FileServer.h  FileSession.cpp  FileSession.h  TcpSession.cpp  TcpSession.h  main.cpp
flamingoserver/imgserversrc/: main.cpp
flamingoserver/mySeverLog/2022_07_22.1853/: ALL  DEBUG  DEBUG_NET  ERROR  INFO  LOG_DEBUG_WS  LOG_ERROR_WS
flamingoserver/mySeverLog/2022_07_23.1853/: ALL  DEBUG  DEBUG_NET  ERROR  LOG_DEBUG_WS
flamingoserver/mysqlapi/: DatabaseMysql.cpp  Field.cpp  QueryResult.cpp  QueryResult.h
flamingoserver/mysqlmgr/: MysqlManager.cpp  MysqlManager.h  MysqlThrd.cpp  MysqlThrdMgr.cpp  TaskList.cpp
flamingoserver/net/: Connector.cpp  InetAddress.cpp  TimerQueue.cpp  TimerQueue.h
flamingoserver/net/Acceptor/: Acceptor.cpp  Acceptor.h
flamingoserver/net/ByteBuffer/: ByteBuffer.cpp  ByteBuffer.h
flamingoserver/net/Channel/: Channel.cpp  Channel.h
flamingoserver/net/EventLoop/: EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h
flamingoserver/net/Poller/: EpollPoller.cpp  EpollPoller.h  PollPoller.cpp  Poller.cpp  Poller.h  SelectPoller.cpp  SelectPoller.h
flamingoserver/net/Sockets/: Sockets.cpp  Sockets.h
flamingoserver/net/TcpClient/: TcpClient.cpp  TcpClient.h
flamingoserver/net/TcpConnection/: TcpConnection.cpp  TcpConnection.h
flamingoserver/net/TcpServer/: TcpServer.cpp  TcpServer.h
flamingoserver/utils/: StringUtil.cpp
